added dedicatoria e agradecimentos

--- a/gabrielPeixoto_tcc.tex
+++ b/gabrielPeixoto_tcc.tex
@@ -31,6 +31,9 @@
 \index{Oferecimento@Oferecimento}%
 \addcontentsline{toc}{chapter}{Dedicatoria}
 
+Dedico este trabalho \`{a} minha fam\'{i}lia e namorada Fernanda, pois sem eles essa
+jornada n\~{a}o teria significado.
+
 \end{ufpaOferecimento}
 
 %%%%%%%%%%%%%%%%%%%%
@@ -40,6 +43,31 @@
 \begin{ufpaAgradecimentos}
 \index{Agradecimentos@Agradecimentos}
 \addcontentsline{toc}{chapter}{Agradecimentos}
+
+Agrade\c{c}o primeiramente \`{a} minha fam\'{i}lia por sempre me apoiar, incansavelmente. Em
+especial \`{a} minha m\~{a}e Marilia Alcantara Peixoto, minha finada av\'{o} Mircia Peixoto,
+minha tia Socorro Peixoto e meu primo Jorge Peixoto, por me apoiarem nos
+momentos dif\'{i}ceis, me darem palavras de consolo na tristeza e palavras s\'{a}bias
+que contribu\'{i}ram para meu crescimento pessoal.
+
+Gostaria de agradecer tamb\'{e}m a minha namorada Fernanda Yamada. Com seu apoio
+di\'{a}rio e companheirismo, pois sem ela esse fim de jornada n\~{a}o teria um d\'{e}cimo da
+alegria. Sua fam\'{i}lia se tornou muito especial tamb\'{e}m.
+
+N\~{a}o poderia deixar de agradecer meu orientador Aldebaro Klautau e meu
+coorientador Igor Freire, pelos in\'{u}meros conselhos e total apoio no decorrer
+desse trabalho. Agrade\c{c}o todos os professores da EngComp, que constru\'{i}ram a base
+que precisei para desenvolver esse trabalho.
+
+Durante a jornada da minha vida, acumulei conhecidos e amigos, tantos que n\~{a}o
+ouso citar nomes. Agrade\c{c}o a todos, pois de uma certa forma cada um contribuiu
+para forma\c{c}\~{a}o do ser humano que sou hoje. Agrade\c{c}o aos amigos de curso que
+compartilharam projetos e inspira\c{c}ões e agrade\c{c}o aos amigos do ETRB por estarem
+comigo desde a inf\^{a}ncia.
+
+Agrade\c{c}o tamb\'{e}m ao grupo de pesquisa UFA-13 pelo apoio e ajuda, pois sem eles
+esse trabalho seria muito mais \'{a}rduo, assim como \`{a} fam\'{i}lia LASSE pelas risadas e
+conversas di\'{a}rias.
 
 \begin{flushright}
 Gabriel Peixoto de Carvalho
@@ -93,7 +121,7 @@ sistema que seja perfeito para o tipo de aplica\c{c}\~{a}o do usu\'{a}rio.
 Partindo dos dois conceitos citados anteriormente um paradigma no ramo das
 tecnologias de acesso a r\'{a}dio vem gerando interesse nas operadoras, as redes
 de acesso a radio centralizadas, ou em nuvem (C-RAN). Com esse tipo de
-tecnologia torna-se poss\'{i}vel escalar e alocar recursos dinâmicamente como
+tecnologia torna-se poss\'{i}vel escalar e alocar recursos din\^{a}micamente como
 todo o poder que a computa\c{c}\~{a}o em nuvem proporciona e redirecionar esses
 recursos para melhorar a qualidade das comunica\c{c}\~{o}es m\'{o}veis.
 
@@ -112,7 +140,7 @@ viabilidade, bem como a documenta\c{c}\~{a}o dos componentes da plataforma
 visando disponibiliza\c{c}\~{a}o para uso de prop\'{o}sito educativo. Este
 trabalho foi implementado usando duas placas FPGA, as placas Xilinx ML605 e
 VC707. O transceiver usado foi a placa FmcommS2 que possui capacidade de
-múltiplas transmiss\~{o}es e recep\~{o}es (MIMO) e se conecta com a placa FPGA
+m\'{u}ltiplas transmiss\~{o}es e recep\~{o}es (MIMO) e se conecta com a placa FPGA
 atrav\'{e}s do conector FMC.
 
 Neste trabalho foram estudados a integra\c{c}\~{a}o e controle do transceiver
