--- a/gabrielPeixoto_tcc.tex
+++ b/gabrielPeixoto_tcc.tex
@@ -80,8 +80,9 @@ Gabriel Peixoto de Carvalho
 %%%%%%%%%%%%%%%%%%%%
 
 \begin{ufpaEpigrafe}
-Viva como se voce fosse morrer amanha. Aprenda como se voce fosse viver para sempre.\\
-\begin{flushright}Mahatma Gandhi\end{flushright}
+A ci\^{e}ncia \'{e}, portanto, uma pervers\~{a}o de si mesma, a menos que tenha
+como fim \'{u}ltimo, melhorar a humanidade.\\
+\begin{flushright}Nikola Tesla\end{flushright}
 \end{ufpaEpigrafe}
 
 %%%%%%%%%%%%%%%%%%%%%
