--- a/gabrielPeixoto_tcc.tex
+++ b/gabrielPeixoto_tcc.tex
@@ -3,7 +3,9 @@
 \include{include}
 \include{packages}
 
-\ufpaTitulo{An FPGA-Based Radio Frontend for LTE Transmission on Cloud RAN}
+%\ufpaTitulo{An FPGA-Based Radio Frontend for LTE Transmission on Cloud RAN}
+\ufpaTitulo{A configurable and flexible FPGA-based radio front-end for
+experimentation in telecommunications with study case in LTE}
 
 \ufpaAutor{Gabriel Peixoto de Carvalho}
 \ufpaSegundoAutor{}
