add references used in chapter 4

--- a/references.bib
+++ b/references.bib
@@ -248,6 +248,22 @@ month={Oct},}
   year =         {2014}
 }
 
+@Manual{xilinx:ultrafast,
+  title =        {{UltraFast Design Methodology Guide for the Vivado Design Suite}},
+  organization = {Xilinx},
+  edition =      {v. 2015.3},
+  month =        nov,
+  year =         {2015}
+}
+
+@Manual{xilinx:axiconn,
+  title =        {{AXI Interconnect v2.1}},
+  organization = {Xilinx},
+  edition =      {v. 2.1},
+  month =        apr,
+  year =         {2016}
+}
+
 
 %%-----------------------------------------------------------------------------
 
