add reference to AXI protocol

--- a/references.bib
+++ b/references.bib
@@ -264,6 +264,13 @@ month={Oct},}
   year =         {2016}
 }
 
+@Manual{xilinx:axi,
+  title =        {{Vivado Design Suite: AXI Reference guide}},
+  organization = {Xilinx},
+  edition =      {v. 3.0},
+  month =        jun,
+  year =         {2015}
+}
 
 %%-----------------------------------------------------------------------------
 
