--- a/gabrielPeixoto_tcc.tex
+++ b/gabrielPeixoto_tcc.tex
@@ -9,12 +9,12 @@ experimentation in telecommunications with study case in LTE}
 
 \ufpaAutor{Gabriel Peixoto de Carvalho}
 \ufpaSegundoAutor{}
-\ufpaOrientador{Prof. Aldebaro Barreto da Rocha Klautau Junior}
-\ufpaCoordenadorCurso{Prof. Francisco Carlos Bentes Frey Muller}
+\ufpaOrientador{Prof. Dr. Aldebaro Barreto da Rocha Klautau Junior}
+\ufpaCoordenadorCurso{Prof. Dr. Francisco Carlos Bentes Frey Muller}
 
-\ufpaCoOrientador{Eng. Igor Antonio Auad Freire}
-\ufpaMembroBancaA{Prof. Francisco Carlos Bentes Frey Muller}
-\ufpaMembroBancaB{Eng. Ilan Souza Correa}
+\ufpaCoOrientador{MsC. Igor Antonio Auad Freire}
+\ufpaMembroBancaA{Prof. Dr. Francisco Carlos Bentes Frey Muller}
+\ufpaMembroBancaB{MsC. Ilan Sousa Correa}
 
 
 \begin{document}
@@ -101,7 +101,8 @@ como fim \'{u}ltimo, melhorar a humanidade.\\
 %  Insere a lista de Figuras e de Tabelas  %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\listoffigures \clearpage \listoftables \clearpage
+\listoffigures \clearpage
+%\listoftables \clearpage
 
 %%%%%%%%%%%%%%%%%%%%
 %      Summary     %
