change some stuff in acrinyms and symbols

--- a/siglas.tex
+++ b/siglas.tex
@@ -46,7 +46,7 @@
 	\item W-CDMA - \textit{Wideband Code division multiple access}
 	\item UMTS - \textit{Universal Mobile Telecommunications System}
 	\item QoS - \textit{Quality of Service}
-	\item E-ULTRA - \textit{Evolved UMTS Terrestrial Radio Access}
+	\item E-UTRA - \textit{Evolved UMTS Terrestrial Radio Access}
 	\item HSPA - \textit{High Speed Packet Access}
 	\item DVB - \textit{Digital Video Broadcasting}
 	\item DVA - \textit{Digital Voice Announcer}
@@ -58,12 +58,12 @@
 	\item WiMAX - \textit{Worldwide Interoperability for Microwave Access}
 	\item FFT - \textit{Fast Fourier Transform}
 	\item IFFT - \textit{Inverse Fast Fourier Transform}
-	\item NodeB - \textit{UMTS equivalent to Base Station (GSM)}
+	\item NodeB - \textit{UMTS equivalent to Base Station in GSM Technologies}
 	\item ENodeB - \textit{Evolved NodeB}
 	\item PDSCH - \textit{Physical Downlink Shared Channel}
 	\item DFT - \textit{Discrete Fourier Transform}
 	\item TCL - \textit{Tool Command Language}
-	\item BIST - \textit{BUilt-in Self Test}
+	\item BIST - \textit{Built-in Self Test}
 	\item LNA - \textit{Low-Noise Amplifier}
 	\item I/O - \textit{Input - Output}
 	\item DCXO - \textit{Digitally Controlled Crystal Oscillator}
