added digital communications overview to part II of the text

--- a/gabrielPeixoto_tcc.tex
+++ b/gabrielPeixoto_tcc.tex
@@ -222,6 +222,7 @@ transceiver for downlink transmission shall be evaluated.
 \input{chapters/cap_introducao}
 
 \part{Literature Review}
+\input{chapters/cap_digicomm}
 \input{chapters/cap_sdr}
 \input{chapters/cap_lte}
 
