reorganize acronyms in alphabetic order, and added new acronyms

--- a/siglas.tex
+++ b/siglas.tex
@@ -1,91 +1,128 @@
 \begin{enumerate}
-	\item MIMO - \textit{Multiple Input Multiple Output}
-	\item BBP - \textit{Baseband Processor}
-	\item RF - \textit{Radio Frequency}
-	\item LTE - \textit{Long Term Evolution}
-	\item C-RAN - \textit{Cloud-RAN or Centralized-RAN}
-	\item RAN - \textit{Radio Access Network}
-	\item LVDS - \textit{Low Voltage Differential Signalling}
-	\item FDD - \textit{Frequency Division Duplex}
-	\item TDD - \textit{Time Division Duplex}
-	\item AGC - \textit{Automatic Gain Control}
-	\item PLL - \textit{Phase Locked Loop}
-	\item BTS - \textit{Base Station}
-	\item DCXO - \textit{Digital Controlled Crystal Oscillator}
-	\item LO - \textit{Local Oscillator}
-	\item BB - \textit{Baseband}
-	\item ADC - \textit{Analog-to-Digital Converter}
-	\item DAC - \textit{Digital-to-Analog Converter}
-	\item RSSI - \textit{Receive Signal Strength Indication}
-	\item FIR - \textit{Finite Impulse Response}
-	\item IIR - \textit{Infinite Impulse Response}
-	\item SNR - \textit{Signal to Noise Rate}
-	\item FMC - \textit{FPGA Mezzanine Card}
-	\item LPC - \textit{Low PIn Count}
-	\item HPC - \textit{High Pin Count}
-	\item UE - \textit{User Equipment}
-	\item SMA - \textit{Subminiature Version A}
-	\item FPGA - \textit{Field Programmable Gate Array}
-	\item ASIC - \textit{Application Specific Integrated Circuit}
-	\item SDR - \textit{Software Defined Radio}
-	\item RAN - \textit{Radio Access Network}
-	\item FSK - \textit{Frequency-shift keying}
-	\item PSK - \textit{Phase-shift keying}
-	\item AM - \textit{Amplitude Modulation}
-	\item FM - \textit{Frequency Modulation}
-	\item PC - \textit{Personal Computer}
-	\item FDM - \textit{Frequency-division Multiplexing}
-	\item TDM - \textit{Time-division Multiplexing}
-	\item VLSI - \textit{Very-large-scale Integration}
-	\item OFDM - \textit{Orthogonal Frequency-division Multiplexing}
-	\item 3GPP - \textit{The 3rd Generation Partnership Project}
-	\item EPC - \textit{Evolved Packet Core}
-	\item SAE - \textit{System Architecture Evolution}
-	\item GSM - \textit{Global System for Mobile Communications}
-	\item CDMA - \textit{Code division multiple access}
-	\item W-CDMA - \textit{Wideband Code division multiple access}
-	\item UMTS - \textit{Universal Mobile Telecommunications System}
-	\item QoS - \textit{Quality of Service}
-	\item E-UTRA - \textit{Evolved UMTS Terrestrial Radio Access}
-	\item HSPA - \textit{High Speed Packet Access}
-	\item DVB - \textit{Digital Video Broadcasting}
+  %numeral
+  \item 3GPP - \textit{The 3rd Generation Partnership Project}
+
+  %A
+  \item API - \textit{Application Program Interface}
+  \item AGC - \textit{Automatic Gain Control}
+  \item ADC - \textit{Analog-to-Digital Converter}
+  \item ASIC - \textit{Application Specific Integrated Circuit}
+  \item AM - \textit{Amplitude Modulation}
+
+  %B
+  \item BBP - \textit{Baseband Processor}
+  \item BTS - \textit{Base Station}
+  \item BB - \textit{Baseband}
+  \item BIST - \textit{Built-in Self Test}
+  \item BBU - \textit{Baseband Unit}
+
+  %C
+  \item C-RAN - \textit{Cloud-RAN or Centralized-RAN}
+  \item CDMA - \textit{Code division multiple access}
+
+  %D
+  \item DAC - \textit{Digital-to-Analog Converter}
+  \item DVB - \textit{Digital Video Broadcasting}
 	\item DVA - \textit{Digital Voice Announcer}
-	\item QPSK - \textit{Quadrature Phase Shift Keying}
+  \item DFT - \textit{Discrete Fourier Transform}
+  \item DCXO - \textit{Digitally Controlled Crystal Oscillator}
+
+  %E
+  \item ENSM - \textit{Enable State Machine}
+  \item ENodeB - \textit{Evolved NodeB}
+  \item E-UTRA - \textit{Evolved UMTS Terrestrial Radio Access}
+  \item EPC - \textit{Evolved Packet Core}
+
+  %F
+  \item FFT - \textit{Fast Fourier Transform}
+  \item FDM - \textit{Frequency-division Multiplexing}
+  \item FM - \textit{Frequency Modulation}
+  \item FSK - \textit{Frequency-shift keying}
+  \item FMC - \textit{FPGA Mezzanine Card}
+  \item FIR - \textit{Finite Impulse Response}
+  \item FDD - \textit{Frequency Division Duplex}
+  \item FPGA - \textit{Field Programmable Gate Array}
+
+  %G
+  \item GSM - \textit{Global System for Mobile Communications}
+
+  %H
+  \item HPC - \textit{High Pin Count}
+  \item HSPA - \textit{High Speed Packet Access}
+
+  %I
+  \item IIR - \textit{Infinite Impulse Response}
+  \item IFFT - \textit{Inverse Fast Fourier Transform}
+  \item I/O - \textit{Input - Output}
+  \item IaaS - \textit{Infrastructure as a Service}
+
+  %J
+
+  %K
+
+  %L
+  \item LTE - \textit{Long Term Evolution}
+  \item LVDS - \textit{Low Voltage Differential Signaling}
+  \item LO - \textit{Local Oscillator}
+  \item LPC - \textit{Low Pin Count}
+  \item LNA - \textit{Low-Noise Amplifier}
+
+  %M
+  \item MIMO - \textit{Multiple Input Multiple Output}
+  \item MSPS - \textit{Mega Samples per Second}
+
+  %N
+  \item NodeB - \textit{UMTS equivalent to Base Station in GSM Technologies}
+
+  %O
+  \item OFDM - \textit{Orthogonal Frequency-division Multiplexing}
+  \item OS - \textit{Operating System}
+
+  %P
+  \item PLL - \textit{Phase Locked Loop}
+  \item PSK - \textit{Phase-shift keying}
+  \item PC - \textit{Personal Computer}
+  \item PAPR - \textit{Peak-to-Average Power Ratio}
+  \item PDSCH - \textit{Physical Downlink Shared Channel}
+  \item PaaS - \textit{Platform as a Service}
+
+  %Q
+  \item QoS - \textit{Quality of Service}
+  \item QPSK - \textit{Quadrature Phase Shift Keying}
 	\item QAM - \textit{Quadrature Amplitude Modulation}
-	\item SC-FDMA - \textit{Single-carrier Frequency-division Multiple Access}
-	\item PAPR - \textit{Peak-to-Average Power Ratio}
-	\item WLAN - \textit{Wireless Local Area Network}
+
+  %R
+  \item RF - \textit{Radio Frequency}
+  \item RAN - \textit{Radio Access Network}
+  \item RSSI - \textit{Receive Signal Strength Indication}
+  \item RX - \textit{Receiver}
+  \item RU - \textit{Radio Unit}
+
+  %S
+  \item SNR - \textit{Signal to Noise Rate}
+  \item SMA - \textit{Subminiature Version A}
+  \item SDR - \textit{Software Defined Radio}
+  \item SAE - \textit{System Architecture Evolution}
+  \item SC-FDMA - \textit{Single-carrier Frequency-division Multiple Access}
+  \item SaaS - \textit{Software as a Service}
+
+  %T
+  \item TDD - \textit{Time Division Duplex}
+  \item TDM - \textit{Time-division Multiplexing}
+  \item TCL - \textit{Tool Command Language}
+  \item TX - \textit{Transmitter}
+
+  %U
+  \item UE - \textit{User Equipment}
+  \item UMTS - \textit{Universal Mobile Telecommunications System}
+  \item UHD - \textit{USRP Hardware Driver}
+
+  %V
+  \item VLSI - \textit{Very-large-scale Integration}
+
+  %XYWZ
+  \item W-CDMA - \textit{Wideband Code division multiple access}
+  \item WLAN - \textit{Wireless Local Area Network}
 	\item WiMAX - \textit{Worldwide Interoperability for Microwave Access}
-	\item FFT - \textit{Fast Fourier Transform}
-	\item IFFT - \textit{Inverse Fast Fourier Transform}
-	\item NodeB - \textit{UMTS equivalent to Base Station in GSM Technologies}
-	\item ENodeB - \textit{Evolved NodeB}
-	\item PDSCH - \textit{Physical Downlink Shared Channel}
-	\item DFT - \textit{Discrete Fourier Transform}
-	\item TCL - \textit{Tool Command Language}
-	\item BIST - \textit{Built-in Self Test}
-	\item LNA - \textit{Low-Noise Amplifier}
-	\item I/O - \textit{Input - Output}
-	\item DCXO - \textit{Digitally Controlled Crystal Oscillator}
-	\item TX - \textit{Transmitter}
-	\item RX - \textit{Receiver}
-	\item ENSM - \textit{Enable State Machine}
-	\item MSPS - \textit{Mega Samples per Second}
-	\item API - \textit{Application Program Interface}
-	%\item RAN - \textit{Radio Access Network}
-	%\item RAN - \textit{Radio Access Network}
-	%\item RAN - \textit{Radio Access Network}
-	%\item RAN - \textit{Radio Access Network}
-	%\item RAN - \textit{Radio Access Network}
-	%\item RAN - \textit{Radio Access Network}
-	%\item RAN - \textit{Radio Access Network}
-	%\item RAN - \textit{Radio Access Network}
-	%\item RAN - \textit{Radio Access Network}
-	%\item RAN - \textit{Radio Access Network}
-	%\item RAN - \textit{Radio Access Network}
-	%\item RAN - \textit{Radio Access Network}
-	%\item RAN - \textit{Radio Access Network}
-	%\item RAN - \textit{Radio Access Network}
-	%\item RAN - \textit{Radio Access Network}
-	%\item RAN - \textit{Radio Access Network}
+
 \end{enumerate}
