--- a/gabrielPeixoto_tcc.tex
+++ b/gabrielPeixoto_tcc.tex
@@ -3,6 +3,9 @@
 \include{include}
 \include{packages}
 
+\hyphenation{mo-du-le}
+
+
 %\ufpaTitulo{An FPGA-Based Radio Frontend for LTE Transmission on Cloud RAN}
 \ufpaTitulo{A configurable and flexible FPGA-based radio front-end for
 experimentation in telecommunications with study case in LTE}
