add new references needed in chapter 3 - SDR

--- a/references.bib
+++ b/references.bib
@@ -48,6 +48,16 @@ keywords={military communication;software architecture;software radio;telecommun
 doi={10.1109/MILCOM.2005.1606035},
 month={Oct},}
 
+@INPROCEEDINGS{ilan2015,
+author={I. Sousa and B. V. Boas and I. Freire and A. Klautau and J. D. Reis},
+booktitle={Microwave and Optoelectronics Conference (IMOC), 2015 SBMO/IEEE MTT-S International},
+title={Parallel polyphase filtering for pulse shaping on high-speed optical communication systems},
+year={2015},
+pages={1-5},
+keywords={field programmable gate arrays;filtering theory;optical communication;optical modulation;optical pulse shaping;quadrature amplitude modulation;16-QAM modulation;FPGA;high-order modulations;high-speed optical communication systems;noninteger oversampling factors;optical super-channel;parallel fractional sample rate conversion;parallel polyphase filtering;pulse shaping filter;Computer architecture;Finite impulse response filters;Optical fibers;Optical pulse shaping;Optical signal processing;Multirate;Nyquist Pulse Shaping;Optical Transmission;Parallel Filtering;Polyphase filtering},
+doi={10.1109/IMOC.2015.7369174},
+month={Nov},}
+
 %%-----------------------------------------------------------------------------
 
 
@@ -272,6 +282,12 @@ month={Oct},}
   year =         {2015}
 }
 
+@Manual{octasicbts,
+  title =        {{OctBTS 4000 - Base Station 2G/3G/4G Platform}},
+  organization = {Octasic Inc.},
+  year =         {2014}
+}
+
 %%-----------------------------------------------------------------------------
 
 
@@ -363,6 +379,22 @@ https://wiki.analog.com/resources/eval/user-guides/ad-fmcomms2-ebz/software/data
   Year = {2016},
   Title = {{LTE Transmitter and Receiver Example}},
   url = {https://wiki.analog.com/resources/tools-software/linux-software/libiio/clients/lte_example},
+  urldate = {2016-05-20}
+}
+
+@online{web:googlechromebook,
+  Author = {Google Inc.},
+  Year = {2016},
+  Title = {{Chromebooks}},
+  url = {http://www.google.com.br/chromebook/},
+  urldate = {2016-05-20}
+}
+
+@online{web:googledocs,
+  Author = {Google Inc.},
+  Year = {2016},
+  Title = {{About Google Docs}},
+  url = {https://www.google.com/docs/about/},
   urldate = {2016-05-20}
 }
 %%-----------------------------------------------------------------------------
