fixed a word in resumo

--- a/gabrielPeixoto_tcc.tex
+++ b/gabrielPeixoto_tcc.tex
@@ -119,7 +119,7 @@ como fim \'{u}ltimo, melhorar a humanidade.\\
 
 \begin{ufpaResumo}
 
-A evolu\c{c}\~{a}o do trafego nos servi\c{c}oes m\'{o}veis de voz para dados
+A evolu\c{c}\~{a}o do trafego nos servi\c{c}os m\'{o}veis de voz para dados
 modificou e vem modificando a forma como as tecnologias de acesso a r\'{a}dio e
 suas camadas de aplica\c{c}\~{a}o s\~{a}o pensadas e implementadas. Atualmente o
 t\'{o}pico de computa\c{c}\~{a}o em nuvem ou Cloud computing, vem sendo cada vez
