--- a/gabrielPeixoto_tcc.tex
+++ b/gabrielPeixoto_tcc.tex
@@ -5,9 +5,8 @@
 
 \hyphenation{mo-du-le}
 
-
 %\ufpaTitulo{An FPGA-Based Radio Frontend for LTE Transmission on Cloud RAN}
-\ufpaTitulo{A configurable and flexible FPGA-based radio front-end for
+\ufpaTitulo{A configurable FPGA-based radio front-end for
 experimentation in telecommunications with study case in LTE}
 
 \ufpaAutor{Gabriel Peixoto de Carvalho}
