fixed references uppercase

--- a/references.bib
+++ b/references.bib
@@ -130,7 +130,7 @@ month={Nov},}
 %%datasheet%%------------------------------------------------------------------
 
 @Manual{ad:ad9361,
-  title =        {RF Agile Transceiver},
+  title =        {{RF} Agile Transceiver},
   organization = {Analog Devices},
   address =      {One Technology Way, P.O. Box 9106, Norwood, MA 02062-9106, U.S.A.},
   year =         {2013-2014}
@@ -138,7 +138,7 @@ month={Nov},}
 
 
 @Manual{ad:ad9361driver,
-  title =        {AD9361 Device Driver Customization},
+  title =        {{AD9361} Device Driver Customization},
   organization = {Analog Devices},
   address =      {One Technology Way, P.O. Box 9106, Norwood, MA 02062-9106, U.S.A.},
   month =        jul,
@@ -147,7 +147,7 @@ month={Nov},}
 
 
 @Manual{ad:ug570,
-  title =        {AD9361 Reference Manual},
+  title =        {{AD9361} Reference Manual},
   organization = {Analog Devices},
   address =      {One Technology Way • P.O. Box 9106 • Norwood, MA 02062-9106, U.S.A.},
   edition =      {Rev. A},
@@ -156,7 +156,7 @@ month={Nov},}
 
 
 @Manual{xilinx:axidma,
-  title =        {LogiCORE IP AXI DMA},
+  title =        {{LogiCORE IP AXI DMA}},
   organization = {Xilinx},
   edition =      {v. 6.01.a},
   month =        jul,
@@ -165,7 +165,7 @@ month={Nov},}
 
 
 @Manual{xilinx:axieth,
-  title =        {AXI Ethernet Subsystem},
+  title =        {{AXI Ethernet} Subsystem},
   organization = {Xilinx},
   edition =      {v. 6.2},
   month =        oct,
@@ -182,7 +182,7 @@ month={Nov},}
 }
 
 @Manual{xilinx:axigpio,
-  title =        {LogiCORE IP AXI GPIO},
+  title =        {{LogiCORE IP AXI GPIO}},
   organization = {xilinx},
   edition =      {v2.0},
   month =        nov,
@@ -191,7 +191,7 @@ month={Nov},}
 
 
 @Manual{xilinx:axiquadspi,
-  title =        {LogiCORE IP AXI Quad SPI},
+  title =        {{LogiCORE IP AXI Quad SPI}},
   organization = {Xilinx},
   edition =      {v3.2},
   month =        nov,
@@ -199,7 +199,7 @@ month={Nov},}
 }
 
 @Manual{xilinx:axiuart,
-  title =        {AXI UART Lite},
+  title =        {{AXI UART Lite}},
   organization = {xilinx},
   edition =      {v2.0},
   month =        nov,
@@ -207,7 +207,7 @@ month={Nov},}
 }
 
 @Manual{xilinx:fifo,
-  title =        {LogiCORE IP FIFO Generator},
+  title =        {{LogiCORE IP FIFO} Generator},
   organization = {Xilinx},
   edition =      {v 12.0},
   month =        jun,
@@ -215,7 +215,7 @@ month={Nov},}
 }
 
 @Manual{xilinx:mig7,
-  title =        {7 Series FPGAs Memory Interface Solutions},
+  title =        {7 Series {FPGA}s Memory Interface Solutions},
   organization = {Xilinx},
   edition =      {v1.3},
   month =        jan,
@@ -224,7 +224,7 @@ month={Nov},}
 
 
 @Manual{xilinx:ml605,
-  title =        {ML605 Hardware User Guide},
+  title =        {{ML605} Hardware User Guide},
   organization = {Xilinx},
   edition =      {v1.8},
   month =        oct,
@@ -233,7 +233,7 @@ month={Nov},}
 
 
 @Manual{xilinx:vc707,
-  title =        {VC707 Evaluation Board for the Virtex-7 FPGA - User Guide},
+  title =        {{VC707} Evaluation Board for the Virtex-7 {FPGA} - User Guide},
   organization = {Xilinx},
   edition =      {v1.6.1},
   month =        sep,
@@ -242,7 +242,7 @@ month={Nov},}
 
 
 @Manual{xilinx:vc709,
-  title =        {VC709 Evaluation Board for the Virtex-7 FPGA - User Guide},
+  title =        {{VC709} Evaluation Board for the Virtex-7 {FPGA} - User Guide},
   organization = {Xilinx},
   edition =      {v1.5},
   month =        mar,
@@ -343,7 +343,7 @@ https://wiki.analog.com/resources/eval/user-guides/ad-fmcomms2-ebz
 @online{ocw:digicomm,
   Author = {Hari Balakrishnan, George Verghese},
   Year = {2012},
-  Title = {Introduction to EECS II: Digital Communication Systems, Fall 2012. (Massachusetts Institute of Technology: MIT OpenCourseWare)},
+  Title = {{Introduction to EECS II: Digital Communication Systems, Fall 2012. (Massachusetts Institute of Technology: MIT OpenCourseWare)}},
   url = {http://ocw.mit.edu},
   urldate = {2016-04-18}
 }
